syntax = "proto3";


message SupplyPayload{
    enum Action {
        CREATE_USER = 0;
        CREATE_WARE = 1;
        UPDATE_WARE = 2;
        TRANSFER_WARE = 3;
    }

    // Whether the payload contains a create user, create ware,
    // update ware, or transfer ware action
    Action action = 1;

    // The transaction handler will read from just one of these fields
    // according to the action
    CreateUserAction create_user = 2;
    CreateWareAction create_ware = 3;
    UpdateWareAction update_ware = 4;
    TransferWareAction transfer_ware = 5;

    // Approximately when transaction was submitted, as a Unix UTC timestamp
    uint64 timestamp = 6;
}


message CreateUserAction {
    // A human-readable name identifying the new user
    string name = 1;
}


message CreateWareAction {
    // The user-defined natural key which identifies the object in the
    // real world (for example a serial number)
    string ware_id = 1;

    // Coordinates are expected to be in millionths of a degree
    sint64 latitude = 2;
    sint64 longitude = 3;
}


message UpdateWareAction {
    // The id of the ware being updated
    string ware_id = 1;

    // Coordinates are expected to be in millionths of a degree
    sint64 latitude = 2;
    sint64 longitude = 3;
}


message TransferWareAction {
    // The id of the ware for the ownership transfer
    string ware_id = 1;

    // The public key of the user to which the ware will be transferred
    string receiving_user = 2;
}
