syntax = "proto3";

//can own, transfer and update Wares
message User {
    // The user's unique public key
    string pubKey = 1;

    // A human-readable name identifying the user
    string name = 2;

    // Approximately when the user was registered, as a Unix UTC timestamp
    // uint64 timestamp = 3;
}


// Special case when hash of two unique entities 
// have the same state adress
// so our supply chain stores containers at each adress instead of the entity itself.
message UserContainer {
    repeated User entries = 1;
}

